Fix spacing after bottom box on homepages
Next, the orange boxes...

--- a/source/files/stylesheets/homepage.css
+++ b/source/files/stylesheets/homepage.css
@@ -183,6 +183,7 @@ body {
 /* homepage-sub-footer */
 .homepage-sub-footer {
   margin-top: 20px;
+  margin-bottom: 40px;
   text-align: center;
   padding: 0 20px;
 }
